--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Demo app that depends on sieve-core."
 requires-python = ">=3.11"
 dependencies = [
-  "sieve-core @ git+https://github.com/sievestack/sieve-core@5e96c8b263b1899aa4f395f832191f41b97b9f3f"
+  "sieve-core-dummy @ git+https://github.com/sievestack/sieve-core-dummy@95c784dc17f4157fe465bf397905239638f9eadd"
 ]
 
 [tool.hatch.metadata]
